# Segmentation-Research

./: Makefile  README.md  pyproject.toml
notebooks/: 001-padli-segementation-RANSAC.ipynb  002-padli-segementation-HISTOGRAM.ipynb
segres/: __init__.py  dataset.py  features.py  plots.py
segres/modeling/: predict.py  train.py
