[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "segres"
version = "0.0.1"
description = "Research combining methode segmentations with RANSAC \u0026 HISTOGRAM"
authors = [
  { name = "padli" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["segres"]
include = ["pyproject.toml", "segres/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["segres"]
force-sort-within-sections = true

